# QA-council

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: qa-council.config.yaml
skills/critic/: SKILL.md
skills/engineer/: SKILL.md
skills/moderator/: SKILL.md
skills/reporter/: SKILL.md
skills/scout/: SKILL.md
skills/strategist/: SKILL.md
src/qa_council/: __init__.py  checkpoints.py  config.py  main.py  skill_loader.py
src/qa_council/agents/: __init__.py  critic.py  engineer.py  moderator.py  reporter.py  scout.py  strategist.py
src/qa_council/crews/: __init__.py  extend_crew.py  maintain_crew.py  new_crew.py
src/qa_council/tasks/: implement.py  recon.py  report.py  strategy.py
src/qa_council/tools/: __init__.py  file_writer.py  http_client.py  spec_parser.py  test_runner.py
tests/: conftest.py  test_checkpoints.py  test_config.py  test_skill_loader.py  test_tools.py
